# budgeteer

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
apps/main/: admin.py  models.py  serializers.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py  0002_auto_20200822_2232.py  0003_auto_20200824_1510.py
apps/main/static/main/: style.css
apps/main/templates/main/: base.html  index.html  overview.html
apps/uploader/: forms.py  profiles.py  utils.py  views.py
apps/uploader/migrations/: 0007_auto_20200629_2045.py  0009_auto_20200824_1519.py
mysite/: db.conf  settings.py  urls.py
mysite/mysite/: settings.py
project/: settings.py  urls.py
src/import/: views.py
src/mysite/: settings.py  urls.py
src/uploader/: admin.py  forms.py  models.py  profiles.py  urls.py  utils.py  views.py
src/uploader/migrations/: 0001_initial.py  0002_statement_booking_status.py  0003_auto_20200613_2145.py  0005_auto_20200629_2027.py  0006_auto_20200629_2032.py  0008_auto_20200714_1502.py
src/uploader/templates/upload/: index.html
src/uploader/templates/uploader/: base.html  index.html  success.html
uploader/: forms.py  profiles.py  views.py
uploader/migrations/: 0004_auto_20200613_2150.py
