[tool.poetry]
name = "budgeteer"
version = "0.1.0"
description = "Reevaluating personal budgeting"
authors = ["GumboYaYa <throbberwocky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
pylint = "^2.5.2"
configobj = "^5.0.6"

[tool.poetry.dev-dependencies]
django = "^3.0.6"
psycopg2 = "^2.8.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
